# pr-tracker

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/models/: pr.py  team.py
backend/app/routes/: health.py  pull_requests.py  team.py
backend/app/services/: codeowners.py  github_client.py  pr_service.py  team_service.py
backend/app/utils/: glob_matcher.py  time_helpers.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/dashboard/: AgeBadge.tsx  BranchFilterTabs.tsx  BranchTypeBadge.tsx  CodeOwnerBadge.tsx  DashboardHeader.tsx  FilterChips.tsx  KPIBar.tsx  PRDetailPanel.tsx  PRTable.tsx  Pagination.tsx  PersonFilter.tsx  RepoFilter.tsx  TableSkeleton.tsx  TeamApprovalsBadge.tsx  TeamSelector.tsx
frontend/src/hooks/: usePRDetail.ts  usePullRequests.ts  useTeams.ts
frontend/src/lib/: constants.ts
frontend/src/types/: pull-request.ts
requirements/: backend_technical_requirements.ipynb  frontend_ux_technical_requirements.ipynb  functional_requirements.ipynb
