[project]
name = "pr-tracker-backend"
version = "1.0.0"
description = "GitHub PR Tracker - Backend API"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
